♻️ Refactor : 레포지토리 테스트코드 리팩토링 진행
개선 및 정리 진행